--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      
-    <div>class= "relogio"
+    <div>
         <span id="horas"> 00 </span>
         <span class="tempo ">horas</span>
     </div>
