--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv=" X-UA-Compatible" content="IE = edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,5 +30,6 @@
     alert (" QUE HORAS SÂO")
     </script>
     <script src="sketch.js"> </script>
+    <script src="script.js"></script>
 </body>
 </html>
