--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="relogio">
      
     <div>
         <span id="horas"> 00 </span>
@@ -24,6 +26,8 @@
     <div>
         <span id="segundos"> 00 </span>
         <span class="tempo ">segundos</span>
+    </div>
+
     </div>
 
     <script >
