--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <span id="minutos"> 00 </span>
         <span class="tempo">minutos</span>
     </div>
+    <h1>HORARIO DE BRASÍLIA</h1>
 
     <div>
         <span id="segundos"> 00 </span>
