--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span id="minutos"> 00 </span>
         <span class="tempo">minutos</span>
     </div>
-    <h1>HORARIO DE BRASÍLIA</h1>
+   <footer   <h1>HORARIO DE BRASÍLIA> </h1></footer> 
 
     <div>
         <span id="segundos"> 00 </span>
