--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <h1>Horario de Brasilia</h1>
 </head>
 <body>
 
@@ -22,7 +23,7 @@
         <span id="minutos"> 00 </span>
         <span class="tempo">minutos</span>
     </div>
-   <footer   <h1>HORARIO DE BRASÍLIA> </h1></footer> 
+ 
 
     <div>
         <span id="segundos"> 00 </span>
