--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <h1>Horario de Brasilia</h1>
+    
 </head>
 <body>
 
@@ -31,6 +31,7 @@
     </div>
 
     </div>
+    <footer> horario de Brasilia</footer>
 
     <script >
     alert (" QUE HORAS SÂO")
