--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
 <meta http-equiv=" X-UA-Compatible" content="IE = edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    
+    <header> Horario de Brasilia</header>
 </head>
 <body>
 
@@ -31,7 +29,7 @@
     </div>
 
     </div>
-    <footer> horario de Brasilia</footer>
+ 
 
     <script >
     alert (" QUE HORAS SÂO")
